fixed .me stretching issue

--- a/css/cv-style.css
+++ b/css/cv-style.css
@@ -184,12 +184,18 @@ footer {
 
         display: flex;
         justify-content: flex-start;
+        flex-wrap: wrap;
     }
 
     .me {
+        min-width: 200px;
         width: 20%;
+        height: 100%;
         margin: 0;
         margin-right: 1em;
+    }
+
+    .header-text {
     }
 
     .experience {
